<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_checkout"
    tools:context=".ui.order.TipFragment">
    <data>
        <variable
            name="viewModel"
            type="com.example.lunchtray.model.OrderViewModel" />
        <variable
            name="tipFragment"
            type="com.example.lunchtray.ui.order.TipFragment" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin">
            <TextView
                android:id="@+id/total_no_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Total: $10.73"
                android:layout_marginStart="16dp"
                android:text="@{@string/total(viewModel.total)}">
            </TextView>

            <TextView
                android:id="@+id/how_the_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/total_no_tip"
                tools:text="How was the service?"
                android:text="@string/how_was_service" />
            <RadioGroup
                android:id="@+id/tip_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/how_the_service"
                android:layout_marginStart="16dp">

                <RadioButton
                    android:id="@+id/option_twenty_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amazing_service"
                    android:onClick="@{() -> viewModel.setTip1() }"/>

                <RadioButton
                    android:id="@+id/option_eighteen_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.setTip2()}"
                    android:text="@string/good_service" />

                <RadioButton
                    android:id="@+id/option_fifteen_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok_service"
                    android:onClick="@{() -> viewModel.setTip3()}"/>

            </RadioGroup>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/round_up_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/round_up_tip"
                android:onClick="@{() -> viewModel.roundTip()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tip_options"
                app:layout_constraintTop_toBottomOf="@id/tip_options" />
            <Button
                android:id="@+id/calculate_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/round_up_switch"
                app:layout_constraintTop_toBottomOf="@id/round_up_switch"
                android:onClick="@{() -> tipFragment.showFinalScoreDialog()}"/>
            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_margin"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calculate_button"
                app:layout_constraintStart_toStartOf="@id/calculate_button"
                android:onClick="@{() -> tipFragment.cancelOrder()}"/>




        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>



